# sound-player

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  example.py  pyproject.toml  requirements-dev.txt  setup.py
scripts/: create_loop.py
sound_player/: __init__.py  android.py  android_pcm.py  audiolayer.py  common.py  linux.py  linux_pcm.py  mixer.py  player.py  sound.py  soundplayer.py  sounds.py  streaming.py  vlc_sound.py
sound_player/core/: __init__.py  audio_config.py  base_player.py  base_sound.py  constants.py  mixins.py  state.py
sound_player/core/mixins/: __init__.py  audio_config.py  fade.py  lock.py  status.py  volume.py
sound_player/mixer/: audio_mixer_system.py  streaming.py
sound_player/platform/: __init__.py
sound_player/platform/android/: __init__.py  _android_api.py  player.py  sound.py  sound_async.py
sound_player/platform/linux/: __init__.py  player.py  sound.py
sound_player/sound/: __init__.py  android.py  linux.py  vlc_sound.py
tests/: conftest.py  mock_class.py  test_audio_config.py  test_audiolayer.py  test_common.py  test_fade_mixin.py  test_linux_pcm.py  test_mixer.py  test_player.py  test_random_repeat_sound.py  test_sound.py
