[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sound-player"
version = "1.0.1"
description = "The aim of this project is to create multi audio layer player with professional audio mixing"
readme = "README.md"
license = "BSD-2-Clause"
requires-python = ">=3.11"
authors = [
    {name = "Maxime Barbier", email = "maxime.barbier1991+ava@gmail.com"},
]
keywords = ["sound", "player", "audio", "mixing", "pcm", "fade", "crossfade"]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Android",
]
dependencies = [
    "krozark-current-platform",
    "numpy>=1.24",
    "soundfile~=0.12",
]

[project.optional-dependencies]
linux = [
    "sounddevice~=0.4",
]
windows = [
    "sounddevice~=0.4",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pre-commit>=3.0",
]

[tool.setuptools.packages.find]
include = ["sound_player*"]

[project.urls]
Homepage = "https://github.com/Krozark/sound-player"

[tool.ruff]
lint.select = [
 # pycodestyle
 "E",
 # Pyflakes
 "F",
 # pyupgrade
 "UP",
 # flake8-bugbear
 "B",
 # flake8-simplify
 "SIM",
 # isort
 "I",]  # Rules to apply
include = ["*.py"]
exclude = ["data/*"]
lint.ignore = [
  "SIM108", # if/else block
  "UP031", # format
  "E722", # bare except
  "SIM115", # open()
  "SIM102", # if statement
  "SIM110", # return all
  "F821", # undefined name
]
target-version = "py312"         # Target Python version
line-length = 120                # Line length for formatting
lint.fixable = ["ALL"]           # Allow automatic fixes for all fixable issues

[tool.ruff.lint.isort]
case-sensitive = false
force-single-line = false         # One import per line

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
# docstring-code-format = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
